fixed main content text alignment on large screen

--- a/style.css
+++ b/style.css
@@ -58,13 +58,14 @@ table {
 
 
 
-
 /*
   ========================================
   Custom styles
   ========================================
 */
-
+* {
+    box-sizing: border-box;
+}
 body {    
 	color: #18374F;
 	font-size: calc(14px + (16 - 14) * ((100vw - 300px) / (1600 - 300)));
@@ -80,13 +81,7 @@ body {
   ========================================
 */
 
-@media screen and (min-width: 870px){
-   
-    .link{
-        width: 30%;
-        padding: 0 10px;
-    }
-}
+
 
 /* 
   ========================================
@@ -119,6 +114,7 @@ nav a:last-child{
     background-color: #FAF3A2;
     border-radius: 5px;
 }
+
 /* ====== main content alignment ====== */
 header h1, main h2 {
     text-align: center;
@@ -130,8 +126,17 @@ header h1, main h2 {
 
 /* ====== main content alignment on large screen ====== */ 
 @media screen and (min-width: 870px){
-    .main-content, header h1, main h2 {
+    main, header h1 {
+        text-align: left;
         margin-left: 20%;
+    }
+  
+    .main-content{
+        display: flex;
+        justify-content: space-around;
+    }
+    .lg-text-left{
+        text-align: left;
     }
 }
 
@@ -139,7 +144,6 @@ header h1, main h2 {
 header, footer{
     padding: 20px 0;
 }
-
 
 
 /* ====== cards with link ====== */ 
@@ -151,6 +155,7 @@ header, footer{
 
 .link h2{
     text-align: center;
+    width: 100%;
 }
 .link div{
     width: 90%;
